<resources>
    <string name="app_name">Auckland</string>
    <string name="cancel">Cancel</string>
    <string name="choose_an_town_city">Choose an town city</string>
    <string name="choose_a_suburb_locality">Choose a suburb locality</string>
    <string name="choose_a_road_name">Choose a road name</string>
    <string name="choose_an_address_number">Choose an address number</string>
    <string name="household_collection">Household collection</string>
    <string name="rubbish">Rubbish</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="recycling">Recycling</string>
    <string name="reminder_me_at">Reminder me at:</string>
    <string name="commercial_collection">Commercial collection</string>
    <string name="channel_name">Auckland Channel</string>
    <string name="home">Home</string>
    <string name="reminder">Reminder</string>
    <string name="info">Info</string>
</resources>